2008-06-25  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/bugs/bugs.xml:
	  Test whether automatic website rebuild works now; also
	  remove prehistoric milestones from bugs list.

2008-06-25  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/bindings/bindings.xml:
	  More c++ bindings page updates.

2008-06-24  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/bugs/bugs.xml:
	  More milestones.

2008-06-24  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/bindings/bindings.xml:
	  Update c++ bindings blurb.

2008-06-18  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.20.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-python/0.10.12.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.20.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	Release 0.10.20 core/base and 0.10.12 python

2008-06-16  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/page.xsl:
	  We have a newsfeed - tell about it.

2008-05-28  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/documentation/plugins.xsl:
	  Fix broken xsl and improve the table layout a bit.

	* src/htdocs/features/index.xml:
	  Mention bridging to other media frameworks. Remove note that
	   gst-editor has not been ported.

	* src/htdocs/index.xml:
	  Reformulate the "what is gstreamer" section a bit.

	* src/htdocs/page.xsl:
	  Link to www category of gstreamer product in bugzilla with
	  subject=page-title in the footer, instead of showing thomas own email
	  address.

2008-05-22  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	Commit the version updates too

2008-05-22  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.10.4.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am: