@@ -45,6 +45,10 @@ wealthiness to purchase hardware bricks.
 <h2>Buzztard</h2>
 <p><a href="http://buzztard.org/index.php/Overview">Buzztard</a> is music application similar to Buzz or FastTracker.</p>
 
+<h2>CampCaster</h2>
+<p><a href="http://www.campware.org/en/camp/campcaster_news/">CampCaster</a> is radio management software that provides live studio broadcast capabilities as well as remote automation in one integrated system.</p>
+
+
 <h2>Cupid</h2>
 <p>
 <a href="http://ronald.bitfreak.net/cupid.php">A GStreamer video Recorder</a>,
@@ -130,9 +134,6 @@ panel applet for playing internet radio streams.
 
 <h2>Listen</h2>
 <p><a href="http://listengnome.free.fr/">Listen</a> is a GNOME music player written in Python</p>
-
-<h2>LiveSupport</h2>
-<p><a href="http://www.campware.org/en/camp/livesupport_news/">LiveSupport</a> is radio management software that provides live studio broadcast capabilities as well as remote automation in one integrated system.</p>
 
 <h2>Marlin</h2>
 <p><a href="http://marlin.sourceforge.net/">marlin</a> is a sample editor for Gnome.</p>
